# vta

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bonnie/vta/demo/: MainActivity.kt
app/src/main/res/values/: ids.xml  themes.xml
cli/: pyproject.toml
cli/src/vta/: __init__.py  adb_bridge.py  install.py  main.py  models.py  state_parser.py
cli/src/vta/resources/: SKILL.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle.kts
sdk/src/main/: AndroidManifest.xml
sdk/src/main/java/com/bonnie/vta/: VtaSdk.kt
sdk/src/main/java/com/bonnie/vta/accessibility/: VtaAccessibilityService.kt
sdk/src/main/java/com/bonnie/vta/capture/: AccessibilityTreeCapture.kt  StabilityDetector.kt  ViewTreeCapture.kt
sdk/src/main/java/com/bonnie/vta/execute/: ActionExecutor.kt  CoordinateResolver.kt
sdk/src/main/java/com/bonnie/vta/hook/: ToastCapture.kt
sdk/src/main/java/com/bonnie/vta/model/: ActionSpace.kt
sdk/src/main/java/com/bonnie/vta/provider/: VtaProvider.kt  VtaSdkInitProvider.kt
sdk/src/main/res/values/: strings.xml
sdk/src/main/res/xml/: vta_accessibility_config.xml  vta_accessibility_service_config.xml
